# Redundant-Coding-Visualization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: CMakeLists.txt
cmake/: AddFiles.cmake  UpdateSubmodules.cmake
dependencies/: CMakeLists.txt
include/: CMakeConfig.hpp  CMakeLists.txt  DebugInterceptor.hpp  HammingCode.hpp  debug_interceptor.hpp  hammingcode.hpp
source/: CMakeLists.txt  HammingCode.cpp  main.cpp
source_gui/: HammingGenerationMatrix.qml  Main.qml  Options.qml  inputHamming.qml
source_gui/VisualizeComponents/: ArrayBit.qml  EmptyArrayRowLayout.qml
src/: DebugInterceptor.cpp  HammingCode.cpp  debug_interceptor.cpp  hammingcode.cpp  main.cpp
src_gui/: CMakeLists.txt  Hamming.qml  HammingGenerationMatrix.qml  HammingSyndrome.qml  Main.qml  Options.qml  inputHamming.qml
src_gui/FormComponents/: VisualizeCheckbox.qml
src_gui/VisualizeComponents/: Array.qml  ArrayRowLayout.qml  EmptyArray.qml  EmptyArrayRowLayout.qml  MenuButton.qml  correctErrorHammingForm.qml
tests/: CMakeLists.txt  hammingTests.cpp
