if(${Boost_FOUND})
    include_directories(${Boost_INCLUDE_DIR})
    set(BOOST_HEADER_ONLY_LIBRARIES "" PARENT_SCOPE)
else()
    update_submodule("${CMAKE_CURRENT_LIST_DIR}/boost")
    add_subdirectory(boost)
endif()

if(${GTest_FOUND})
    set(GTEST_LINK gtest_main PARENT_SCOPE)
else()
    update_submodule("${CMAKE_CURRENT_LIST_DIR}/gtest")
    add_subdirectory(gtest)
    set(GTEST_LINK GTest::gtest_main PARENT_SCOPE)
endif()
